- Removed FontLabel and ShadowedFontLabel. UILabel allowed for both custom fonts and hard drop shadows.
git-svn-id: file:///Users/brent/Dropbox/Development/Repositories/ZenSudoku/trunk@55 4be4153c-cb45-4615-a51f-74384bbadf62

--- a/ZenSudoku/ZenSudoku-Info.plist
+++ b/ZenSudoku/ZenSudoku-Info.plist
@@ -42,6 +42,13 @@
 	<string>v0.5.2a</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>ReklameScript-Regular.ttf</string>
+		<string>ReklameScript-Medium.ttf</string>
+		<string>ReklameScript-Bold.ttf</string>
+		<string>ReklameScript-Black.ttf</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
