--- a/ZenSudoku/ZenSudoku-Info.plist
+++ b/ZenSudoku/ZenSudoku-Info.plist
@@ -10,8 +10,8 @@
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>ZSIconNew57.png</string>
 		<string>ZSIconNew114.png</string>
+		<string>ZSIconNew57.png</string>
 	</array>
 	<key>CFBundleIcons</key>
 	<dict>
@@ -35,11 +35,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>v0.5.2a</string>
+	<string>v0.6.0a</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>v0.5.2a</string>
+	<string>v0.6.0a</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIAppFonts</key>
@@ -49,6 +49,8 @@
 		<string>ReklameScript-Bold.ttf</string>
 		<string>ReklameScript-Black.ttf</string>
 	</array>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
