--- a/ZenSudoku/ZenSudoku-Info.plist
+++ b/ZenSudoku/ZenSudoku-Info.plist
@@ -20,7 +20,7 @@
 		<string>Icon-Small@2x.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>TenFourInc.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>TenFourSoftware.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
