- Added preference to prevent screen dimming while in the app.
git-svn-id: file:///Users/brent/Dropbox/Development/Repositories/ZenSudoku/trunk@153 4be4153c-cb45-4615-a51f-74384bbadf62

--- a/ZenSudoku/Settings.bundle/Root.plist
+++ b/ZenSudoku/Settings.bundle/Root.plist
@@ -6,6 +6,16 @@
 	<array>
 		<dict>
 			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Prevent Screen Dimming</string>
+			<key>Key</key>
+			<string>kPreventScreenDimmingOptionKey</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
 			<string>PSMultiValueSpecifier</string>
 			<key>Title</key>
 			<string>Show Errors</string>
