- Removed initial cache population on app launch. It was too slow and made for a lossy first experience. - Updated version number to v1.0. WOOHOO!
git-svn-id: file:///Users/brent/Dropbox/Development/Repositories/ZenSudoku/trunk@208 4be4153c-cb45-4615-a51f-74384bbadf62

--- a/ZenSudoku/sudo-Info.plist
+++ b/ZenSudoku/sudo-Info.plist
@@ -28,11 +28,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>v0.9.3b</string>
+	<string>v1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>v0.9.3b</string>
+	<string>v1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIAppFonts</key>
