- Updated project version to drop the "v". - Fixed provisioning profiles to match those in the new Apple ID.
git-svn-id: file:///Users/brent/Dropbox/Development/Repositories/ZenSudoku/trunk@209 4be4153c-cb45-4615-a51f-74384bbadf62

--- a/ZenSudoku/sudo-Info.plist
+++ b/ZenSudoku/sudo-Info.plist
@@ -20,7 +20,7 @@
 		<string>Icon-Small@2x.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>TenFourSoftware.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.sudoapp.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -28,11 +28,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>v1.0</string>
+	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>v1.0</string>
+	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIAppFonts</key>
