--- a/ZenSudoku/sudo-Info.plist
+++ b/ZenSudoku/sudo-Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
